resized images and removed absolute sizing

--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
     <div class="content-body">
 
 
+      <h1>"How 'bout them apples?"</h1>
       <h2>History of Festival</h2>
       <div class="content-section">
         <div>
@@ -47,7 +48,8 @@
           </p>
         </div>
         <picture>
-          <img src="images/5-DSC_5537.jpg" alt="expression of joy for applefest" height="200">
+          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+          <img src="images/5-DSC_5537.jpg" alt="expression of joy for applefest">
         </picture>
       </div>
       <h2>Frequently Asked Questions</h2>
@@ -65,7 +67,6 @@
         be
         found here.
       </p>
-
 
       <p> <strong>Can I pay with a credit card?</strong>
 
@@ -96,7 +97,8 @@
           festival.
         </p>
         <picture>
-          <img src="images/24-DSC_6022.jpg" alt="a food truck worker making food" height="200">
+          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+          <img src="images/24-DSC_6022.jpg" alt="a food truck worker making food">
         </picture>
       </div>
 
@@ -120,7 +122,8 @@
           for
           construction</strong></p>
       <picture>
-        <img src="images/25-DSC_6041.jpg" alt="a carnival game to pop baloons" width="250">
+        <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+        <img src="images/25-DSC_6041.jpg" alt="a carnival game to pop baloons">
       </picture>
       <h3>Ride the Bus</h3>
       <p>Avoid the hassle of parking altogether and ride TCAT to Downtown. Both Green Street and Seneca Street bus
@@ -160,7 +163,8 @@
         </ul>
 
         <picture>
-          <img src="images/29-DSC_6088.jpg" alt="a man sings an opera piece" width="200">
+          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+          <img src="images/29-DSC_6088.jpg" alt="a man sings an opera piece">
         </picture>
 
       </div>
@@ -168,14 +172,12 @@
 
       <h2>Volunteering</h2>
       <strong>This is a Community Event and it can't happen without your support! We want to recognize the hard work of
-        our
-        Volunteers who help to ensure the festival runs smoothly.</strong>
+        our Volunteers who help to ensure the festival runs smoothly.</strong>
 
       <p>
         <a href="https://www.signupgenius.com/index.cfm?go=s.signup&urlid=10c0e48aca72aabf8cf8-2022&view=standard">Click
           Here to Volunteer for Apple Harvest Festival</a>
       </p>
-
     </div>
   </div>
 </body>
