--- a/offering.html
+++ b/offering.html
@@ -68,7 +68,8 @@
         </div>
 
         <picture>
-          <img src="images/MTD-Applefest22-29.JPG" alt="a food vendor makes apple cider donuts" height="300">
+          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+          <img src="images/MTD-Applefest22-29.JPG" alt="a food vendor makes apple cider donuts">
         </picture>
       </div>
 
@@ -103,7 +104,8 @@
           </p>
         </div>
         <picture>
-          <img src="images/MTD-Applefest22-26.JPG" alt="an apple cider donut" height="300">
+          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+          <img src="images/MTD-Applefest22-26.JPG" alt="an apple cider donut">
         </picture>
       </div>
 
@@ -132,7 +134,8 @@
         CBD Store, and more!
       </p>
       <picture>
-        <img src="images/27-DSC_6056.jpg" alt="a carnival game to pop baloons" width="350">
+        <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+        <img src="images/27-DSC_6056.jpg" alt="a carnival game to pop baloons">
       </picture>
 
       <h2>Festival Happenings...</h2>
@@ -220,7 +223,8 @@
       </ul>
       <div class="content-section">
         <picture>
-          <img src="images/MTD-Applefest22-28.JPG" alt="basket of apples" height="200">
+          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+          <img src="images/MTD-Applefest22-28.JPG" alt="basket of apples">
         </picture>
       </div>
       <h2>Apple Harvest Gift Basket Contest</h2>
@@ -265,7 +269,8 @@
 
 
         </div>
-        <img src="images/16-DSC_5664.jpg" alt="a bagpipe player at applefest" width="200">
+        <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+        <img src="images/16-DSC_5664.jpg" alt="a bagpipe player at applefest">
       </div>
     </div>
   </div>
