Improved visual of site and images
- Improved color to be triadic
- Improved nav bar to be floating and rounded
- Images resized and don't scale

--- a/offering.html
+++ b/offering.html
@@ -270,7 +270,7 @@
 
         </div>
         <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
-        <img src="images/16-DSC_5664.jpg" alt="a bagpipe player at applefest">
+        <img src="images/16-DSC_5664.jpg" alt="a bagpipe player at applefest" height="301">
       </div>
     </div>
   </div>
