--- a/about.html
+++ b/about.html
@@ -32,8 +32,7 @@
     <div class="content-body">
 
 
-      <h1>"How 'bout them apples?"</h1>
-      <h2>History of Festival</h2>
+      <h2>"How 'bout them apples?" - A History of Festival</h2>
       <div class="content-section">
         <div>
           <p>
@@ -43,14 +42,20 @@
             Apple
             Harvest Craft Fair! Find creative, unique works from clothing to woodworking, ceramics to paintings, fudge
             to
-            essential oils and beyond throughout the festival. The festival is held in the Ithaca Commons, a few streets
+            essential oils and beyond throughout the festival. The festival is held in the Ithaca Commons, a few
+            streets
             that are full of restaurants and shops.
           </p>
         </div>
-        <picture>
-          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
-          <img src="images/5-DSC_5537.jpg" alt="expression of joy for applefest">
-        </picture>
+        <div class="graphic">
+          <picture>
+            <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+            <img src="images/5-DSC_5537.jpg" alt="expression of joy for applefest">
+          </picture>
+          <cite><a href="https://www.demersmediagroup.com/work/applefest-2022">Ming DeMers 2022</a> </cite>
+        </div>
+
+
       </div>
       <h2>Frequently Asked Questions</h2>
 
@@ -96,10 +101,13 @@
           a good idea. However, many attendees find that the crowds on the weekend add to the energy and fun of the
           festival.
         </p>
-        <picture>
-          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
-          <img src="images/24-DSC_6022.jpg" alt="a food truck worker making food">
-        </picture>
+        <div class="graphic">
+          <picture>
+            <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+            <img src="images/24-DSC_6022.jpg" alt="a food truck worker making food">
+          </picture>
+          <cite><a href="https://www.demersmediagroup.com/work/applefest-2022">Ming DeMers 2022</a> </cite>
+        </div>
       </div>
 
 
@@ -116,15 +124,20 @@
 
       <a href="https://www.cityofithaca.org/243/Parking-Operations"> More parking info</a>
       <h3>Garage parking</h3>
-      <p>Visitors can park in the Seneca and Cayuga garages and walk to any part of the festival. Parking is $1.00/hour
+      <p>Visitors can park in the Seneca and Cayuga garages and walk to any part of the festival. Parking is
+        $1.00/hour
         inside the garage on during the week.</p>
       <p> FREE PARKING inside both garages: Saturday & Sunday during the festival. <strong>The Green Garage is CLOSED
           for
           construction</strong></p>
-      <picture>
-        <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
-        <img src="images/25-DSC_6041.jpg" alt="a carnival game to pop baloons">
-      </picture>
+      <div class="graphic">
+        <picture>
+          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+          <img src="images/25-DSC_6041.jpg" alt="a carnival game to pop baloons">
+        </picture>
+        <cite><a href="https://www.demersmediagroup.com/work/applefest-2022">Ming DeMers 2022</a> </cite>
+      </div>
+
       <h3>Ride the Bus</h3>
       <p>Avoid the hassle of parking altogether and ride TCAT to Downtown. Both Green Street and Seneca Street bus
         stations
@@ -142,14 +155,16 @@
       <h3>Biking</h3>
       <p>Ride a bike to the festival and park at any of the art bike racks around downtown. Please be sure to dismount
         and
-        walk your bike while on the Ithaca Commons and within the festival footprint. Also, map your bike route with <a
-          href="https://www.bikewalktompkins.org/maps">Bike Walk Tompkins.</a></p>
+        walk your bike while on the Ithaca Commons and within the festival footprint. Also, map your bike route with
+        <a href="https://www.bikewalktompkins.org/maps">Bike Walk Tompkins.</a>
+      </p>
 
       <a href="https://ithacabikerackproject.wordpress.com/">Find an Art Bike Rack</a>
 
 
       <h2>Festival Applications</h2>
-      <p>Apple Harvest Festival is a community event with opportunities for all to get involved! Our Vendor Applications
+      <p>Apple Harvest Festival is a community event with opportunities for all to get involved! Our Vendor
+        Applications
         are
         closed, but you can still join us in the action as a Volunteer, apply below.</p>
       <div class="content-section">
@@ -162,16 +177,20 @@
 
         </ul>
 
-        <picture>
-          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
-          <img src="images/29-DSC_6088.jpg" alt="a man sings an opera piece">
-        </picture>
+        <div class="graphic">
+          <picture>
+            <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+            <img src="images/29-DSC_6088.jpg" alt="a man sings an opera piece">
+          </picture>
+          <cite><a href="https://www.demersmediagroup.com/work/applefest-2022">Ming DeMers 2022</a> </cite>
+        </div>
 
       </div>
 
 
       <h2>Volunteering</h2>
-      <strong>This is a Community Event and it can't happen without your support! We want to recognize the hard work of
+      <strong>This is a Community Event and it can't happen without your support! We want to recognize the hard work
+        of
         our Volunteers who help to ensure the festival runs smoothly.</strong>
 
       <p>
