--- a/offering.html
+++ b/offering.html
@@ -67,10 +67,13 @@
           </ul>
         </div>
 
-        <picture>
-          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
-          <img src="images/MTD-Applefest22-29.JPG" alt="a food vendor makes apple cider donuts">
-        </picture>
+        <div class="graphic">
+          <picture>
+            <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+            <img src="images/MTD-Applefest22-29.JPG" alt="a food vendor makes apple cider donuts">
+          </picture>
+          <cite><a href="https://www.demersmediagroup.com/work/applefest-2022">Ming DeMers 2022</a> </cite>
+        </div>
       </div>
 
       <h2>Participants</h2>
@@ -103,10 +106,13 @@
             Playland Amusements Concessions
           </p>
         </div>
-        <picture>
-          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
-          <img src="images/MTD-Applefest22-26.JPG" alt="an apple cider donut">
-        </picture>
+        <div class="graphic">
+          <picture>
+            <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+            <img src="images/MTD-Applefest22-26.JPG" alt="an apple cider donut">
+          </picture>
+          <cite><a href="https://www.demersmediagroup.com/work/applefest-2022">Ming DeMers 2022</a> </cite>
+        </div>
       </div>
 
       <h3>Crafters</h3>
@@ -133,10 +139,13 @@
         Your
         CBD Store, and more!
       </p>
-      <picture>
-        <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
-        <img src="images/27-DSC_6056.jpg" alt="a carnival game to pop baloons">
-      </picture>
+      <div class="graphic">
+        <picture>
+          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+          <img src="images/27-DSC_6056.jpg" alt="a carnival game to pop baloons">
+        </picture>
+        <cite><a href="https://www.demersmediagroup.com/work/applefest-2022">Ming DeMers 2022</a> </cite>
+      </div>
 
       <h2>Festival Happenings...</h2>
       <h3>At our shops!</h3>
@@ -222,10 +231,13 @@
         </li>
       </ul>
       <div class="content-section">
-        <picture>
-          <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
-          <img src="images/MTD-Applefest22-28.JPG" alt="basket of apples">
-        </picture>
+        <div class="graphic">
+          <picture>
+            <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+            <img src="images/MTD-Applefest22-28.JPG" alt="basket of apples">
+          </picture>
+          <cite><a href="https://www.demersmediagroup.com/work/applefest-2022">Ming DeMers 2022</a> </cite>
+        </div>
       </div>
       <h2>Apple Harvest Gift Basket Contest</h2>
       <p>
@@ -269,8 +281,13 @@
 
 
         </div>
-        <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
-        <img src="images/16-DSC_5664.jpg" alt="a bagpipe player at applefest" height="301">
+        <div class="graphic">
+          <picture>
+            <!--Credit: Ming DeMers, DeMers Media Group. 9/30/22-->
+            <img src="images/16-DSC_5664.jpg" alt="a bagpipe player at applefest" height="301">
+          </picture>
+          <cite><a href="https://www.demersmediagroup.com/work/applefest-2022">Ming DeMers 2022</a> </cite>
+        </div>
       </div>
     </div>
   </div>
