--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2> Sept. 30 - Oct. 2, 2022</h2>
     </header>
     <figure>
-      <!-- Source: Downtown Ithaca, provided by INFO 1300 Course-->
+      <!-- Source: Downtown Ithaca, provided by INFO 1300 Course; instructor provided-->
       <img src="images/apple-harvest-logo.svg" alt="apple harvest festival 2022">
     </figure>
   </div>
@@ -52,7 +52,7 @@
           </p>
         </div>
         <picture>
-          <!-- Source: content provided with the project.-->
+          <!-- Source: content provided with the project; instructor provided-->
           <img src="images/apple-basket.jpg" alt="basket of apples">
         </picture>
       </div>
@@ -110,21 +110,21 @@
       <h2>Sponsors</h2>
       <strong>THE 40TH ANNUAL APPLE HARVEST FESTIVAL IS PRESENTED BY:</strong>
       <figure>
-        <!--Source: Tompkins Community Bank, provided with the project-->
+        <!--Source: Tompkins Community Bank, provided with the project; instructor provided-->
         <img src="images/sponsors/tompkins_trust_logo.png" alt="Tompkins Community Bank">
       </figure>
       <strong>And supported by:</strong>
 
       <figure>
-        <!-- Source: The Ithaca Mariott, provided with the project -->
+        <!-- Source: The Ithaca Mariott, provided with the project; instructor provided -->
         <img src="images/sponsors/IthacaMarriottLogo-e1629952392721.png" alt="Ithaca Mariott">
       </figure>
       <figure>
-        <!-- Source: Monks Downtown, provided with the project -->
+        <!-- Source: Monks Downtown, provided with the project; instructor provided -->
         <img src="images/sponsors/monks_logo.png" alt="Monks on the Commons">
       </figure>
       <figure>
-        <!-- Source: Maguire Auto Sales Ithaca, provided with the project -->
+        <!-- Source: Maguire Auto Sales Ithaca, provided with the project; instructor provided -->
         <img src="images/sponsors/maguire_logo.png" alt="Maguire Motors">
       </figure>
     </div>
